--- a/composite-video-monitor.csproj
+++ b/composite-video-monitor.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>composite_video_monitor</RootNamespace>
+    <RootNamespace>CompositeVideoMonitor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
