Naive signal approach with zero mq

--- a/CompositeVideoMonitor.csproj
+++ b/CompositeVideoMonitor.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="OpenTK.NETCore" Version="*" />
+    <PackageReference Include="NetMq" Version="*" />
   </ItemGroup>
 
 </Project>
