--- a/CompositeVideoMonitor.csproj
+++ b/CompositeVideoMonitor.csproj
@@ -2,13 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>CompositeVideoMonitor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTK.NETCore" Version="*" />
-    <PackageReference Include="NetMq" Version="*" />
+    <PackageReference Include="NetMq" Version="4.0.1.4" />
+    <PackageReference Include="OpenTK.NetStandard" Version="1.0.5.22" />
   </ItemGroup>
-
 </Project>
